--- a/index.html
+++ b/index.html
@@ -627,25 +627,6 @@
       font-size: 11px;
       text-transform: lowercase;
     }
-
-    /* Saving indicator */
-    #savingIndicator {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: var(--accent);
-      color: white;
-      padding: 10px 16px;
-      border-radius: 100px;
-      font-size: 12px;
-      z-index: 2000;
-      opacity: 0;
-      transition: opacity 0.3s;
-    }
-
-    #savingIndicator.show {
-      opacity: 1;
-    }
   </style>
 </head>
 <body>
@@ -737,71 +718,10 @@
     </div>
   </div>
 
-  <!-- Saving Indicator -->
-  <div id="savingIndicator">syncing...</div>
-
   <script>
-    const GIST_FILENAME = 'briefing-notes.json';
-    let notes = [];
+    // Simple notes with localStorage only
+    let notes = JSON.parse(localStorage.getItem('briefing_notes') || '[]');
     let editingNoteId = null;
-    let gistId = localStorage.getItem('briefing_gist_id');
-    let tokenModal = null;
-
-    // Get GitHub token
-    async function getToken() {
-      let token = localStorage.getItem('github_token');
-      if (!token) {
-        const result = await showTokenModal();
-        token = localStorage.getItem('github_token');
-      }
-      return token;
-    }
-
-    function showTokenModal() {
-      return new Promise((resolve) => {
-        if (tokenModal) {
-          resolve(false);
-          return;
-        }
-        tokenModal = document.createElement('div');
-        tokenModal.id = 'tokenModal';
-        tokenModal.style.cssText = 'position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,0.5);display:flex;align-items:center;justify-content:center;z-index:2000;';
-        tokenModal.innerHTML = `
-          <div style="background:white;padding:32px;border-radius:24px;max-width:400px;width:90%;text-align:center;">
-            <h3 style="font-size:16px;margin-bottom:16px;">GitHub Token Required</h3>
-            <p style="font-size:13px;color:#8a8a8a;margin-bottom:20px;">Enter your GitHub Personal Access Token to sync notes across devices. Stored locally only.</p>
-            <input type="password" id="tokenInput" placeholder="ghp_..." style="width:100%;padding:12px;border:1px solid #e5e5e5;border-radius:12px;font-size:14px;margin-bottom:16px;outline:none;">
-            <div style="display:flex;gap:12px;justify-content:center;">
-              <button id="tokenCancel" style="padding:10px 20px;border:1px solid #e5e5e5;border-radius:100px;background:white;font-size:13px;cursor:pointer;">Cancel</button>
-              <button id="tokenSave" style="padding:10px 20px;border:none;border-radius:100px;background:#1a1a1a;color:white;font-size:13px;cursor:pointer;">Save Token</button>
-            </div>
-          </div>
-        `;
-        document.body.appendChild(tokenModal);
-
-        const saveBtn = document.getElementById('tokenSave');
-        const cancelBtn = document.getElementById('tokenCancel');
-        const input = document.getElementById('tokenInput');
-
-        saveBtn.onclick = () => {
-          const t = input.value.trim();
-          if (t) {
-            localStorage.setItem('github_token', t);
-            tokenModal.remove();
-            tokenModal = null;
-            resolve(true);
-          }
-        };
-
-        cancelBtn.onclick = () => {
-          tokenModal.remove();
-          tokenModal = null;
-          resolve(false);
-        };
-
-        input.focus();
-      });
-    }
 
     // Navigation
     document.querySelectorAll('.nav-tab').forEach(tab => {
@@ -814,98 +734,15 @@
     });
 
     // Date
-    const options = { weekday: 'long', month: 'long', day: 'numeric' };
-    document.getElementById('currentDate').textContent = new Date().toLocaleDateString('en-US', options);
-
-    // Gist sync functions
-    async function fetchNotes() {
-      const token = await getToken();
-      if (!token) {
-        notes = JSON.parse(localStorage.getItem('briefing_notes') || '[]');
-        renderNotes();
-        return;
-      }
-
-      try {
-        if (gistId) {
-          const response = await fetch(`https://api.github.com/gists/${gistId}`, {
-            headers: { 'Authorization': `token ${token}` }
-          });
-          if (response.ok) {
-            const data = await response.json();
-            const content = data.files[GIST_FILENAME]?.content;
-            if (content) {
-              notes = JSON.parse(content);
-              localStorage.setItem('briefing_notes', JSON.stringify(notes));
-              renderNotes();
-              return;
-            }
-          }
-        }
-        notes = JSON.parse(localStorage.getItem('briefing_notes') || '[]');
-        renderNotes();
-      } catch (e) {
-        console.error('Failed to fetch notes:', e);
-        notes = JSON.parse(localStorage.getItem('briefing_notes') || '[]');
-        renderNotes();
-      }
-    }
-
-    async function saveNotesToGist() {
-      const token = await getToken();
-      if (!token) return;
-
-      const indicator = document.getElementById('savingIndicator');
-      indicator.classList.add('show');
-
-      try {
-        const content = JSON.stringify(notes, null, 2);
-
-        if (gistId) {
-          await fetch(`https://api.github.com/gists/${gistId}`, {
-            method: 'PATCH',
-            headers: {
-              'Authorization': `token ${token}`,
-              'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({
-              files: { [GIST_FILENAME]: { content } }
-            })
-          });
-        } else {
-          const response = await fetch('https://api.github.com/gists', {
-            method: 'POST',
-            headers: {
-              'Authorization': `token ${token}`,
-              'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({
-              description: 'Briefing app notes',
-              public: false,
-              files: { [GIST_FILENAME]: { content } }
-            })
-          });
-          if (response.ok) {
-            const data = await response.json();
-            gistId = data.id;
-            localStorage.setItem('briefing_gist_id', gistId);
-          }
-        }
-      } catch (e) {
-        console.error('Failed to save to Gist:', e);
-      } finally {
-        indicator.classList.remove('show');
-      }
-    }
+    document.getElementById('currentDate').textContent = new Date().toLocaleDateString('en-US', {
+      weekday: 'long', month: 'long', day: 'numeric'
+    });
 
     // Notes functions
     function formatDate(date) {
-      return new Intl.DateTimeFormat('en-US', {
-        month: 'short',
-        day: 'numeric',
-        hour: '2-digit',
-        minute: '2-digit'
-      }).format(date);
+      return new Date(date).toLocaleDateString('en-US', {
+        month: 'short', day: 'numeric', hour: '2-digit', minute: '2-digit'
+      });
     }
 
     function renderNotes() {
@@ -924,19 +761,13 @@
       grid.innerHTML = notes.map(note => `
         <div class="note-card" onclick="editNote('${note.id}')">
           <div class="note-date">${formatDate(note.updatedAt)}</div>
-          <div class="note-content">${escapeHtml(note.content)}</div>
+          <div class="note-content">${note.content.replace(/</g, '&lt;').replace(/>/g, '&gt;')}</div>
           <div class="note-actions" onclick="event.stopPropagation()">
             <button onclick="editNote('${note.id}')">edit</button>
             <button class="delete" onclick="deleteNote('${note.id}')">delete</button>
           </div>
         </div>
       `).join('');
-    }
-
-    function escapeHtml(text) {
-      const div = document.createElement('div');
-      div.textContent = text;
-      return div.innerHTML;
     }
 
     function openNoteModal(id = null) {
@@ -967,7 +798,7 @@
       editingNoteId = null;
     }
 
-    async function saveNote() {
+    function saveNote() {
       const content = document.getElementById('noteInput').value.trim();
       if (!content) return;
 
@@ -987,26 +818,20 @@
         });
       }
 
-      // Save to localStorage immediately
       localStorage.setItem('briefing_notes', JSON.stringify(notes));
       renderNotes();
       closeNoteModal();
-
-      // Sync to Gist in background (no await)
-      saveNotesToGist().catch(console.error);
     }
 
     function editNote(id) {
       openNoteModal(id);
     }
 
-    async function deleteNote(id) {
+    function deleteNote(id) {
       if (confirm('delete this note?')) {
         notes = notes.filter(n => n.id !== id);
         localStorage.setItem('briefing_notes', JSON.stringify(notes));
         renderNotes();
-        // Sync to Gist in background (no await)
-        saveNotesToGist().catch(console.error);
       }
     }
 
@@ -1245,7 +1070,7 @@
     document.getElementById('toolsGrid').innerHTML = toolsData.map(tool => `
       <div class="tool-card">
         <div class="tool-icon" style="background: ${tool.color}15; color: ${tool.color}">${tool.icon}</div>
-        <div class="tool        <div class="tool-info">
+        <div class="tool-info">
           <div class="tool-name">${tool.name}</div>
           <div class="tool-category">${tool.category}</div>
           <p class="tool-desc">${tool.desc}</p>
@@ -1254,7 +1079,7 @@
     `).join('');
 
     // Initialize
-    fetchNotes();
+    renderNotes();
   </script>
 </body>
 </html>
