chore: Redesign site to align with professional Apple-style aesthetics

--- a/index.html
+++ b/index.html
@@ -3,35 +3,128 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>briefing.</title>
+  <title>Briefing - Upgraded</title>
+  <style>
+    :root {
+      --bg: #000000;
+      --card-bg: #121212;
+      --text-primary: #FFFFFF;
+      --text-secondary: #B3B3B3;
+      --accent: #0A84FF;
+      --padding: 16px;
+      --radius: 20px;
+      --transition: all 0.3s ease;
+    }
+
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'Inter', sans-serif;
+      background: var(--bg);
+      color: var(--text-primary);
+      line-height: 1.6;
+      max-width: 100vw;
+      overflow-x: hidden;
+    }
+
+    .container {
+      max-width: 700px;
+      margin: 0 auto;
+      padding: 24px 16px;
+    }
+
+    .header {
+      text-align: center;
+      margin-bottom: 24px;
+    }
+
+    .header h1 {
+      font-size: 24px;
+    }
+
+    .news-card {
+      background: var(--card-bg);
+      border-radius: var(--radius);
+      margin-bottom: 16px;
+      padding: var(--padding);
+      box-shadow: 0 4px 16px rgba(0,0,0,0.4);
+      transition: var(--transition);
+    }
+
+    .news-card h3 {
+      font-size: 18px;
+      margin: 0 0 8px 0;
+    }
+
+    .news-card p {
+      font-size: 14px;
+      margin: 0 0 12px 0;
+      color: var(--text-secondary);
+    }
+
+    .news-card a {
+      font-size: 14px;
+      color: var(--accent);
+      text-decoration: none;
+      transition: var(--transition);
+    }
+
+    .news-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 24px rgba(0,0,0,0.6);
+    }
+
+    .news-card a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 12px;
+      color: var(--text-secondary);
+    }
+  </style>
 </head>
 <body>
-  <div id="newsGrid"></div>
+  <div class="container">
+    <header class="header">
+      <h1>Daily Briefing</h1>
+      <p>Stay informed with the latest updates</p>
+    </header>
+
+    <div id="newsGrid">
+      <div>Loading latest news...</div>
+    </div>
+
+    <footer>
+      Powered by OpenClaw · Designed for Saber<br>
+      <a href="https://github.com/saberzou/OpenClawPlayground" target="_blank">View Source</a>
+    </footer>
+  </div>
+
   <script>
     async function fetchNews() {
-      console.log('[News] Fetching content...');
+      console.log('[News] Fetching articles...');
       const newsGrid = document.getElementById('newsGrid');
-      newsGrid.innerHTML = '<p>Loading latest news...</p>';
       try {
-        const response = await fetch('data/news.json?t=' + Date.now());
-        if (!response.ok) throw new Error('Fetch failed! Status: ' + response.status);
+        const response = await fetch('data/news.json');
+        if (!response.ok) throw new Error('Failed to fetch news');
+
         const { articles } = await response.json();
-        if (!articles || articles.length === 0) {
-          newsGrid.innerHTML = '<p>No articles found!</p>';
-          return;
-        }
-        newsGrid.innerHTML = articles.map(article => `
-          <div>
+        newsGrid.innerHTML = articles.slice(0, 10).map(article => `
+          <div class="news-card">
             <h3>${article.title}</h3>
             <p>${article.description}</p>
             <a href="${article.link}" target="_blank">Read more...</a>
           </div>
         `).join('');
+
       } catch (error) {
+        console.error('[News] Error:', error);
         newsGrid.innerHTML = '<p>Error loading news. Try again later.</p>';
-        console.error('[News] Fetch error:', error);
       }
     }
+
     fetchNews();
   </script>
 </body>
