--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Briefing - Upgraded</title>
+  <title>Briefing - Themed</title>
   <style>
     :root {
       --bg: #000000;
@@ -16,6 +16,14 @@
       --transition: all 0.3s ease;
     }
 
+    [data-theme="light"] {
+      --bg: #FFFFFF;
+      --card-bg: #F5F5F5;
+      --text-primary: #000000;
+      --text-secondary: #4A4A4A;
+      --accent: #1D4ED8;
+    }
+
     body {
       margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'Inter', sans-serif;
@@ -24,6 +32,7 @@
       line-height: 1.6;
       max-width: 100vw;
       overflow-x: hidden;
+      transition: var(--transition);
     }
 
     .container {
@@ -103,6 +112,15 @@
   </div>
 
   <script>
+    function applyTheme() {
+      const hour = new Date().getHours();
+      const theme = (hour >= 6 && hour < 19) ? 'light' : 'dark';
+      document.body.setAttribute('data-theme', theme);
+      console.log(`[Theme] Applied: ${theme}`);
+    }
+
+    applyTheme(); // Set theme on page load
+
     async function fetchNews() {
       console.log('[News] Fetching articles...');
       const newsGrid = document.getElementById('newsGrid');
