feat: Add theme switcher for manual override

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Briefing - Themed</title>
+  <title>Briefing - Theme Switcher</title>
   <style>
     :root {
       --bg: #000000;
@@ -42,7 +42,9 @@
     }
 
     .header {
-      text-align: center;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       margin-bottom: 24px;
     }
 
@@ -86,6 +88,22 @@
       text-decoration: underline;
     }
 
+    .theme-switcher {
+      background: var(--card-bg);
+      border: none;
+      padding: 8px 12px;
+      border-radius: var(--radius);
+      cursor: pointer;
+      font-size: 14px;
+      color: var(--text-primary);
+      transition: var(--transition);
+    }
+
+    .theme-switcher:hover {
+      background: var(--text-secondary);
+      color: var(--bg);
+    }
+
     footer {
       text-align: center;
       margin-top: 20px;
@@ -98,7 +116,7 @@
   <div class="container">
     <header class="header">
       <h1>Daily Briefing</h1>
-      <p>Stay informed with the latest updates</p>
+      <button class="theme-switcher" onclick="toggleTheme()">Switch Theme</button>
     </header>
 
     <div id="newsGrid">
@@ -113,10 +131,25 @@
 
   <script>
     function applyTheme() {
+      const savedTheme = localStorage.getItem('theme');
+      if (savedTheme) {
+        document.body.setAttribute('data-theme', savedTheme);
+        console.log(`[Theme] Applied saved theme: ${savedTheme}`);
+        return;
+      }
+
       const hour = new Date().getHours();
       const theme = (hour >= 6 && hour < 19) ? 'light' : 'dark';
       document.body.setAttribute('data-theme', theme);
-      console.log(`[Theme] Applied: ${theme}`);
+      console.log(`[Theme] Applied time-based theme: ${theme}`);
+    }
+
+    function toggleTheme() {
+      const currentTheme = document.body.getAttribute('data-theme');
+      const newTheme = currentTheme === 'light' ? 'dark' : 'light';
+      document.body.setAttribute('data-theme', newTheme);
+      localStorage.setItem('theme', newTheme);
+      console.log(`[Theme] Toggled theme to: ${newTheme}`);
     }
 
     applyTheme(); // Set theme on page load
