--- a/index.html
+++ b/index.html
@@ -3,163 +3,138 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Briefing - Theme Switcher</title>
+  <title>Daily Briefing - Y2K Style</title>
   <style>
     :root {
-      --bg: #000000;
-      --card-bg: #121212;
-      --text-primary: #FFFFFF;
-      --text-secondary: #B3B3B3;
-      --accent: #0A84FF;
-      --padding: 16px;
-      --radius: 20px;
-      --transition: all 0.3s ease;
-    }
-
-    [data-theme="light"] {
-      --bg: #FFFFFF;
-      --card-bg: #F5F5F5;
-      --text-primary: #000000;
-      --text-secondary: #4A4A4A;
-      --accent: #1D4ED8;
+      --bg: #0f0f0f;
+      --text-primary: #7fff00; /* Neon green */
+      --text-secondary: #ff69b4; /* Hot pink */
+      --border: #ff4500; /* Bright orange */
+      --highlight: #00bfff; /* Electric blue */
+      --mono: 'Courier New', Courier, monospace;
+      --radius: 4px;
     }
 
     body {
       margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'Inter', sans-serif;
       background: var(--bg);
       color: var(--text-primary);
+      font-family: var(--mono);
+      font-size: 16px;
       line-height: 1.6;
-      max-width: 100vw;
-      overflow-x: hidden;
-      transition: var(--transition);
     }
 
     .container {
-      max-width: 700px;
-      margin: 0 auto;
-      padding: 24px 16px;
+      max-width: 800px;
+      margin: 32px auto;
+      padding: 16px;
+      border: 2px solid var(--border);
+      border-radius: var(--radius);
+      background: #1c1c1c; /* Slightly lighter for contrast */
+      box-shadow: 0 0 10px rgba(255, 105, 180, 0.3);
+      overflow: hidden;
     }
 
-    .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 24px;
+    header {
+      text-align: center;
+      margin-bottom: 16px;
+      border-bottom: 1px dashed var(--highlight);
+      padding-bottom: 8px;
     }
 
-    .header h1 {
+    header h1 {
       font-size: 24px;
+      margin: 0;
+      color: var(--highlight);
+    }
+
+    header p {
+      font-size: 14px;
+      color: var(--text-secondary);
+    }
+
+    .ascii {
+      text-align: center;
+      color: var(--text-secondary);
+      margin: 16px 0;
+      font-size: 12px;
     }
 
     .news-card {
-      background: var(--card-bg);
+      background: var(--bg);
+      border: 1px solid var(--border);
       border-radius: var(--radius);
-      margin-bottom: 16px;
-      padding: var(--padding);
-      box-shadow: 0 4px 16px rgba(0,0,0,0.4);
-      transition: var(--transition);
+      padding: 12px;
+      margin-bottom: 12px;
     }
 
     .news-card h3 {
-      font-size: 18px;
-      margin: 0 0 8px 0;
+      margin: 0 0 4px 0;
+      color: var(--highlight);
     }
 
     .news-card p {
       font-size: 14px;
-      margin: 0 0 12px 0;
       color: var(--text-secondary);
     }
 
     .news-card a {
       font-size: 14px;
-      color: var(--accent);
       text-decoration: none;
-      transition: var(--transition);
-    }
-
-    .news-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 24px rgba(0,0,0,0.6);
+      color: var(--text-primary);
     }
 
     .news-card a:hover {
       text-decoration: underline;
-    }
-
-    .theme-switcher {
-      background: var(--card-bg);
-      border: none;
-      padding: 8px 12px;
-      border-radius: var(--radius);
-      cursor: pointer;
-      font-size: 14px;
-      color: var(--text-primary);
-      transition: var(--transition);
-    }
-
-    .theme-switcher:hover {
-      background: var(--text-secondary);
-      color: var(--bg);
+      color: var(--highlight);
     }
 
     footer {
       text-align: center;
-      margin-top: 20px;
+      margin-top: 16px;
+      padding-top: 16px;
+      border-top: 1px dashed var(--highlight);
+    }
+
+    footer p {
       font-size: 12px;
-      color: var(--text-secondary);
+      color: var(--text-primary);
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <header class="header">
+    <header>
       <h1>Daily Briefing</h1>
-      <button class="theme-switcher" onclick="toggleTheme()">Switch Theme</button>
+      <p>Your retro-inspired knowledge hub!</p>
     </header>
+
+    <div class="ascii">
+      <pre>
+  /\\_/\\  (Y2K Inspired)
+ ( o.o )
+  > ^ <
+      </pre>
+    </div>
 
     <div id="newsGrid">
       <div>Loading latest news...</div>
     </div>
 
     <footer>
-      Powered by OpenClaw · Designed for Saber<br>
-      <a href="https://github.com/saberzou/OpenClawPlayground" target="_blank">View Source</a>
+      <p>🌐 Powered by OpenClaw | Designed for Saber</p>
+      <p>&copy; 2026 - Internet Revival Society</p>
     </footer>
   </div>
 
   <script>
-    function applyTheme() {
-      const savedTheme = localStorage.getItem('theme');
-      if (savedTheme) {
-        document.body.setAttribute('data-theme', savedTheme);
-        console.log(`[Theme] Applied saved theme: ${savedTheme}`);
-        return;
-      }
-
-      const hour = new Date().getHours();
-      const theme = (hour >= 6 && hour < 19) ? 'light' : 'dark';
-      document.body.setAttribute('data-theme', theme);
-      console.log(`[Theme] Applied time-based theme: ${theme}`);
-    }
-
-    function toggleTheme() {
-      const currentTheme = document.body.getAttribute('data-theme');
-      const newTheme = currentTheme === 'light' ? 'dark' : 'light';
-      document.body.setAttribute('data-theme', newTheme);
-      localStorage.setItem('theme', newTheme);
-      console.log(`[Theme] Toggled theme to: ${newTheme}`);
-    }
-
-    applyTheme(); // Set theme on page load
-
     async function fetchNews() {
-      console.log('[News] Fetching articles...');
+      console.log('Fetching news...');
       const newsGrid = document.getElementById('newsGrid');
+
       try {
         const response = await fetch('data/news.json');
-        if (!response.ok) throw new Error('Failed to fetch news');
+        if (!response.ok) throw new Error('News fetch failed.');
 
         const { articles } = await response.json();
         newsGrid.innerHTML = articles.slice(0, 10).map(article => `
@@ -169,10 +144,9 @@
             <a href="${article.link}" target="_blank">Read more...</a>
           </div>
         `).join('');
-
-      } catch (error) {
-        console.error('[News] Error:', error);
-        newsGrid.innerHTML = '<p>Error loading news. Try again later.</p>';
+      } catch (err) {
+        console.error('Error fetching news:', err);
+        newsGrid.innerHTML = '<p>Failed to load news. Try again later.</p>';
       }
     }
 
