--- a/index.html
+++ b/index.html
@@ -3,150 +3,118 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Daily Briefing - Y2K Style</title>
+  <title>Saber's Briefings - Inspired Y2K</title>
   <style>
     :root {
-      --bg: #0f0f0f;
-      --text-primary: #7fff00; /* Neon green */
-      --text-secondary: #ff69b4; /* Hot pink */
-      --border: #ff4500; /* Bright orange */
-      --highlight: #00bfff; /* Electric blue */
-      --mono: 'Courier New', Courier, monospace;
-      --radius: 4px;
+      --bg: #111111;
+      --text: #00FF96;
+      --highlight: #FFB6C1;
+      --card-bg: #191919;
+      --mono: 'Courier New', monospace;
     }
 
     body {
       margin: 0;
       background: var(--bg);
-      color: var(--text-primary);
+      color: var(--text);
       font-family: var(--mono);
-      font-size: 16px;
+      padding: 24px;
       line-height: 1.6;
-    }
-
-    .container {
-      max-width: 800px;
-      margin: 32px auto;
-      padding: 16px;
-      border: 2px solid var(--border);
-      border-radius: var(--radius);
-      background: #1c1c1c; /* Slightly lighter for contrast */
-      box-shadow: 0 0 10px rgba(255, 105, 180, 0.3);
-      overflow: hidden;
     }
 
     header {
       text-align: center;
-      margin-bottom: 16px;
-      border-bottom: 1px dashed var(--highlight);
-      padding-bottom: 8px;
+      margin-bottom: 24px;
     }
 
-    header h1 {
+    .ascii-header {
+      color: var(--highlight);
+      font-size: 14px;
+      text-align: center;
+    }
+
+    .content {
+      margin: 0 auto;
+      max-width: 700px;
+      border: 1px solid var(--text);
+      padding: 16px;
+      background: var(--card-bg);
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(255, 182, 193, 0.2);
+    }
+
+    .ascii-footer {
+      margin-top: 40px;
+      color: var(--highlight);
+      text-align: center;
+      font-size: 12px;
+    }
+
+    h1 {
       font-size: 24px;
-      margin: 0;
+    }
+
+    a {
       color: var(--highlight);
-    }
-
-    header p {
-      font-size: 14px;
-      color: var(--text-secondary);
-    }
-
-    .ascii {
-      text-align: center;
-      color: var(--text-secondary);
-      margin: 16px 0;
-      font-size: 12px;
-    }
-
-    .news-card {
-      background: var(--bg);
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      padding: 12px;
-      margin-bottom: 12px;
-    }
-
-    .news-card h3 {
-      margin: 0 0 4px 0;
-      color: var(--highlight);
-    }
-
-    .news-card p {
-      font-size: 14px;
-      color: var(--text-secondary);
-    }
-
-    .news-card a {
-      font-size: 14px;
       text-decoration: none;
-      color: var(--text-primary);
     }
 
-    .news-card a:hover {
+    a:hover {
       text-decoration: underline;
-      color: var(--highlight);
     }
 
-    footer {
-      text-align: center;
-      margin-top: 16px;
-      padding-top: 16px;
-      border-top: 1px dashed var(--highlight);
+    .news-item {
+      padding: 16px;
+      margin: 12px 0;
+      border: 1px dashed var(--highlight);
     }
 
-    footer p {
-      font-size: 12px;
-      color: var(--text-primary);
+    .news-item h3 {
+      margin: 0;
+      color: var(--text);
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>Daily Briefing</h1>
-      <p>Your retro-inspired knowledge hub!</p>
-    </header>
-
-    <div class="ascii">
+  <header>
+    <h1>Saber's Daily Briefing</h1>
+    <div class="ascii-header">
       <pre>
-  /\\_/\\  (Y2K Inspired)
- ( o.o )
-  > ^ <
+   /\_/\
+  ( o.o ) -- Welcome!
+   > ^ <
       </pre>
     </div>
+  </header>
 
-    <div id="newsGrid">
-      <div>Loading latest news...</div>
-    </div>
-
-    <footer>
-      <p>🌐 Powered by OpenClaw | Designed for Saber</p>
-      <p>&copy; 2026 - Internet Revival Society</p>
-    </footer>
+  <div class="content" id="newsGrid">
+    Loading...
   </div>
+
+  <footer class="ascii-footer">
+    <pre>
+   /\_/\
+  ( -.- )  Saber 2026©
+   > ^ <
+    </pre>
+  </footer>
 
   <script>
     async function fetchNews() {
-      console.log('Fetching news...');
-      const newsGrid = document.getElementById('newsGrid');
-
+      const container = document.querySelector('#newsGrid');
       try {
         const response = await fetch('data/news.json');
-        if (!response.ok) throw new Error('News fetch failed.');
+        const data = await response.json();
 
-        const { articles } = await response.json();
-        newsGrid.innerHTML = articles.slice(0, 10).map(article => `
-          <div class="news-card">
+        container.innerHTML = data.articles.map(article => `
+          <div class="news-item">
             <h3>${article.title}</h3>
             <p>${article.description}</p>
-            <a href="${article.link}" target="_blank">Read more...</a>
+            <a href="${article.link}" target="_blank">Read More</a>
           </div>
         `).join('');
       } catch (err) {
-        console.error('Error fetching news:', err);
-        newsGrid.innerHTML = '<p>Failed to load news. Try again later.</p>';
+        container.innerHTML = '<p>Failed to load news</p>';
       }
     }
 
